Add addToCart event listener to product component

--- a/src/app/domains/products/pages/list/list.component.html
+++ b/src/app/domains/products/pages/list/list.component.html
@@ -4,6 +4,7 @@
     [img]="product.img"
     [price]="product.price"
     [title]="product.title"
+    (addToCart)="addToCardListener($event)"
   />
 
   }
