--- a/src/app/domains/products/pages/list/list.component.html
+++ b/src/app/domains/products/pages/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-3">
+<div class="grid grid-cols-3 gap-8">
   @for (product of products; track product) {
   <app-product
     [img]="product.img"
