--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -1,5 +1,9 @@
-<p></p>
-<p></p>
+<p>
+  <input type="number" (change)="changeDurationHandler($event)" [value]="duration()">
+</p>
+<p>
+  <input type="text" (change)="changeMessageHandler($event)" [value]="message()">
+</p>
 <p>
   <app-counter [duration]="duration()" [message]="message()" />
 </p>
