Refactor input elements and add lifecycle hooks to CounterComponent

--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -1,9 +1,20 @@
 <p>
-  <input type="number" (change)="changeDurationHandler($event)" [value]="duration()">
+  <input
+    type="number"
+    (change)="changeDurationHandler($event)"
+    [value]="duration()"
+  />
 </p>
 <p>
-  <input type="text" (change)="changeMessageHandler($event)" [value]="message()">
+  <input
+    type="text"
+    (change)="changeMessageHandler($event)"
+    [value]="message()"
+  />
 </p>
+@if (duration()>0) {
+
 <p>
   <app-counter [duration]="duration()" [message]="message()" />
 </p>
+}
